<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationTestActivity">

    <Button android:id="@+id/btn_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_basic_notification"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        />

    <Button android:id="@+id/btn_big_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_bigtextstyle_notification"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />

    <Button android:id="@+id/btn_big_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_bigpicturestyle_notification"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />

    <Button android:id="@+id/btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_notification_with_action"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />


</LinearLayout>