<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp">
    <LinearLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="100dp"
            android:id="@+id/btn_open_web"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_btn"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/open_rupp_website" />

        <Button
            android:id="@+id/btn_open_map"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/white"
            android:text="@string/view_location" />

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/white"
            android:text="@string/take_a_photo" />

        <Button
            android:id="@+id/btn_share_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/white"
            android:text="@string/share_text" />

        <Button
            android:id="@+id/btn_pick_image"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/white"
            android:text="@string/pick_an_image" />

        <!-- Preview Image -->
        <Button
            android:id="@+id/btn_dial"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/dial_a_phone_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_picked_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Preview"
            android:scaleType="centerCrop" />
    </LinearLayout>
</ScrollView>