<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    style="@style/background_lightMode"
    tools:context=".fragment.AddExpensefragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="139dp"
            android:layout_height="126dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/expense_tracker_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/main_launcher_foreground" />

        <TextView
            android:id="@+id/Expense_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/expanse_title"
            android:textColor="@color/Text_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/amount_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/AmountInput"
            app:layout_constraintTop_toBottomOf="@+id/Expense_Text" />

        <EditText
            android:id="@+id/AmountInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_input"
            android:hint="@string/amount_title"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/currencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/currency"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/currencyRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/AmountInput" />

        <RadioGroup
            android:id="@+id/currencyRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencyLabel">

            <RadioButton
                android:id="@+id/USDButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/USD_CRN"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/KHRButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/KHR_CRN"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <TextView
            android:id="@+id/CategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cartegories_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/categoryLayout"
            app:layout_constraintTop_toBottomOf="@+id/currencyRadioGroup" />

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/CategoryLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_input"
                android:minHeight="48dp"
                android:padding="12dp" />

            <ImageButton
                android:id="@+id/addCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:contentDescription="Add New Category"
                android:minHeight="48dp"
                android:padding="8dp"
                android:src="@android:drawable/ic_input_add" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/take_photo"
            android:textColor="@color/text_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_expense" />

        <Button
            android:id="@+id/btn_pick_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/select_from_gallery"
            android:textColor="@color/text_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_expense" />

        <ImageView
            android:id="@+id/logoimage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/categoryLayout" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_input"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel" />

        <TextView
            android:id="@+id/RemarkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/remark_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/remark"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_input"
            android:gravity="top|start"
            android:hint="@string/write_your_note"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RemarkLabel" />

        <Button
            android:id="@+id/btn_add_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_btn"
            android:padding="12dp"
            android:text="@string/button_text"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remark" />

        <ImageView
            android:id="@+id/receiptImageView"
            android:layout_width="0dp"
            android:layout_height="183dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Preview"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pick_image" />

        <ProgressBar
            android:id="@+id/tasks_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>